tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:24:20
   |
24 |         let left = slice(arr, 0, idx)
   |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:25:21
   |
25 |         let right = slice(arr, idx + 1, len(arr))
   |                     ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_part1.flx:49:13
   |
49 |             push(acc, (d * 1000000) + pair_code(i, j))
   |             ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:61:13
   |
61 |     let s = put({}, "p", parents)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:62:5
   |
62 |     put(s, "sz", sizes)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:66:11
   |
66 |     match get(state, "p") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:73:11
   |
73 |     match get(state, "sz") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:118:16
    |
118 | let top_keys = slice(sorted_keys, 0, 1000)
    |                ^^^^^

Hint:
  Define it first: let slice = ...;

Found 8 errors.
== stdout ==
<not executed>
